2000-03-25  Akim Demaille  <akim@epita.fr>

	* autoheader.sh (checking completeness): Be ready to recognize
	patterns with a value, and spaces between `#' and the directive, e.g.
	# define FOO FIXME:
	Reported by John Fortin.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_RUN_IFELSE): New macro.
	(AC_TRY_RUN_NATIVE): Remove.
	(AC_TRY_RUN): Use AC_RUN_IFELSE, not AC_TRY_RUN_NATIVE.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_LIB): Ah ah!  I recognized you, even
	masked: you are AC_TRY_LINK_FUNC.
	Fix quotation.
	(AC_SEARCH_LIBS): Use AC_SHELL_IFELSE.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* tests/semantics.m4 (AC_TRY_LINK_FUNC, AC_CHECK_LIB): New tests.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LANG_CALL, AC_LANG_CALL(C), AC_LANG_CALL(C++),
	AC_LANG_CALL(FORTRAN77)): New macros.
	(AC_TRY_LINK_FUNC): Use it.
	(AC_TRY_CPP): Argument was output twice.
	(AC_COMPILE_IFELSE, AC_LINK_IFELSE): Output $3 only if needed.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_TRY_COMPILER): Use AC_LINK_IFELSE.
	(AC_TRY_LINK_FUNC, AC_CHECK_LIB, AC_CHECK_FUNC): Don't check that
	the current language is C++ to output `extern "C"': the CPP
	condition is enough.

2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LINK_IFELSE, AC_COMPILE_IFELSE): New macros.
	(AC_TRY_LINK, AC_TRY_COMPILE): Use them.
	(AC_CHECK_MEMBER, AC_COMPILE_CHECK, AC_CHECK_DECL,
	_AC_CHECK_TYPE_NEW): Adjust.
	* acspecific.m4 (AC_DECL_YYTEXT, AC_PATH_XTRA): Adjust.

2000-03-23  Steven G. Johnson <stevenj@alum.mit.edu>

	* acspecific.m4 (AC_F77_NAME_MANGLING): Need to use
	AC_F77_LIBRARY_LDFLAGS when linking C and Fortran code.

2000-03-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LANG_PROGRAM, AC_LANG_PROGRAM(C),
	AC_LANG_PROGRAM(C++), AC_LANG_PROGRAM(FORTRAN77)): New macros.
	(AC_TRY_COMPILE, AC_TRY_LINK): Use them.

2000-03-23  Akim Demaille  <akim@epita.fr>
